--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="slideshow__slide-background background-absolute">
               <div class="slideshow__slide-image-wrap background-absolute">
                 <div class="slideshow__slide-image background-absolute">
-                    <video autoplay loop !important>
+                    <video loop="true" autoplay="autoplay" muted>
                         <source src="images/fleet.mp4" type="video/mp4">
                     </video></div>
               </div>
@@ -91,7 +91,7 @@
             <div class="slideshow__slide-background background-absolute">
               <div class="slideshow__slide-image-wrap background-absolute">
                 <div class="slideshow__slide-image background-absolute">
-                    <video autoplay loop !important>
+                    <video loop="true" autoplay="autoplay" muted>
                     <source src="images/reflective.mp4" type="video/mp4">
                     </video></div>
               </div>
@@ -120,7 +120,7 @@
             <div class="slideshow__slide-background background-absolute">
               <div class="slideshow__slide-image-wrap background-absolute">
                 <div class="slideshow__slide-image background-absolute">
-                    <video autoplay loop !important>
+                    <video loop="true" autoplay="autoplay" muted>
                         <source src="images/tracking.mp4" type="video/mp4">
                     </video></div>
               </div>
