--- a/textile.html
+++ b/textile.html
@@ -61,7 +61,7 @@
                 <div class="row9">
                     <span class="title">01</span>
                     <h2 class="line8">VEHICLE CANVAS PRODUCTS</h2>
-                    <p>They are tarpaulins that are made to measure for different types of vehicles such as military and police vehicles. </p>
+                    <p>We stock and sell vehicle covers (vehicle measured and stitched) that are made to measure for different types of vehicles such as military and police vehicles. The materials that we use are ribstops, tarpaulin PVC and clear PVC which are of high quality.</p>
                 </div>
             </div>
 
