--- a/faqs.html
+++ b/faqs.html
@@ -108,7 +108,7 @@
                                     <span class="icon2" aria-hidden="true"></span>
                                 </button>
                                 <div class="accordion-content">
-                                    <p>All our online digital speed limiters are equipped with online tracking. In addition, we do offer tracking services at a cost of Ksh. 18, 000 incl. VAT for installation and an annual renewal fee of Ksh. 6,000 incl. VAT.</p>
+                                    <p>All our digital speed limiters are equipped with online tracking. In addition, we do offer tracking services at a cost of Ksh. 18, 000 incl. VAT for installation and an annual renewal fee of Ksh. 6,000 incl. VAT.</p>
                                 </div>
                             </div>
 
@@ -223,7 +223,7 @@
                                     <span class="icon2" aria-hidden="true"></span>
                                 </button>
                                 <div class="accordion-content">
-                                    <p>We have a variety of products namely: online digital speed limiters and fleet management, tracking, securon seat belts, fire extinguishers, chevrons, reflectors, CCTV systems, biometrics machines, alarm systems, first aid kits and life savers. For more information, visit our Products Page. </p>
+                                    <p>We have a variety of products namely: digital speed limiters and fleet management, tracking, securon seat belts, fire extinguishers, chevrons, reflectors, CCTV systems, biometrics machines, alarm systems, first aid kits and life savers. For more information, visit our Products Page. </p>
                                 </div>
                             </div>
 
