--- a/products.html
+++ b/products.html
@@ -146,7 +146,7 @@
                         <h5>Get In Touch</h5>
                         <p><img class="icon" src="images/loc.png">Lunga Lunga Road - Industrial Area</p>
                     <p><img class="icon" src="images/address.png">P.O. BOX 9596 - 00100 Nairobi, Kenya</p>
-                    <p><img class="icon" src="images/tel.png">(+254) 733 375 799/020 2010432</p>
+                    <p><img class="icon" src="images/tel.png">(+254) 733 375 799 or 020 2010432</p>
                     <p><img class="icon" src="images/email.png">info@pinnaclesystemskenya.net</p>
                     </div>
                 </div>
